style/mobile.app.scss
/* ... */
#loading > div {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 198px;
    @include prefixProperty(transform, translate3d(0px, -50%, 0px));
    background: url(../img/mobile/logo.png) center center no-repeat;
    background-size: contain;
    color: transparent;
}

.info-view {
    position: absolute;
    top: 100%;
    width: 100%;
    height: 50%;
    background: white;
    @include prefixProperty(transform, translateZ(0px));
}

.code-view {
    color: #000;
    padding: 15px;
    @include user-select(auto);

    .button-view {
        clear: both;
        margin-bottom: 10px;
        margin-left: auto;
        margin-right: auto;
        padding: 10px;
        text-align: center;
        background: rgba(0, 0, 0, 0.5);
        color: white;
        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
        border-radius: 5px;
    }

    .reset-picture-button-view {
        background: rgba(128, 0, 0, 0.5);
    }

    > * {
        font-size: 1.05em;
    }

    .css-property-name {
        float: left;
    }

    .css-property-value {
        float: left;
    }

    .data-uri {
        display: inline-block;
        width: 200px;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    a {
        color: #8757ad;
        text-decoration: underline;
    }

    .function-name {
        color: #446fbd;
    }

    .function-name.custom {
        color: #446fbd;
    }

    .parameter-name {
        color: #535353;
    }

    .keyword {
        color: #446fbd;
    }

    .parameter-value {
        color: #738d00;
    }

    .parameter-unit {
        color: #000;
    }

    .function-arguments.custom {
    }

    .keyframe-percent {
        color: #000;
    }

    .property-name {
        color: #000;
    }

    .keyframe-content {
        margin-left: 20px;
    }
}

